--- a/src/client/app.scss
+++ b/src/client/app.scss
@@ -2,23 +2,82 @@
   font-family: 'Fira Sans', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+body {
+  background-color: #f1f1f1;
+}
+
+li {
+  list-style-type: none;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2em;
+  text-align: right;
+}
+
 input[type=text]{
   font-size: 20px;
+  padding: 6px;
 }
 
 .main-content {
   margin: 0 auto;
-  max-width: 660px;
+  max-width: 1000px;
 }
 
-.setlist-url-form {
+.nav-login {
+  background-color: #2ebd59;
+  color: #fff;
+  padding: 1em;
+  text-decoration: none;
+  border-radius: 5em;
+  display: inline-block;
+
+  &:hover {
+    background: #1ED760;
+  }
+}
+
+.setlist-form {
   display: flex;
+  justify-content: center;
 }
 
-.setlist-url-form__submit {
-  width: 200px;
+.setlist-form-url {
+  width: 80%;
+}
+
+.setlist-form-submit {
+  width: 20%;
+  border: 1px solid #c4c4c4;
+  background: white;
+  color: #484848;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+
+  &:hover {
+    border-color: black;
+  }
 }
 
 .track {
   display: flex;
 }
+
+.nav-title {
+  margin-top: 0;
+  margin-bottom: 0;
+  align-self: center;
+}
+
+.panel {
+  margin-bottom: 10px;
+  background-color: #fff;
+  border-bottom: 2px solid #eef0f2;
+  box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  padding: 15px 30px;
+}
+
